--- a/package.json
+++ b/package.json
@@ -10,7 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "awesome": "^0.0.7",
     "chart.js": "^4.4.9",
+    "emailjs-com": "^3.2.0",
+    "font": "^0.0.4",
+    "icons": "^1.0.0",
+    "jspdf": "^3.0.1",
     "react": "^19.1.0",
     "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
